--- a/index.html
+++ b/index.html
@@ -555,7 +555,9 @@
       }
       document.getElementById('score').innerText =
         "Your score: " + score + " / " + correctAnswers.length;
-        
+      if (score <25)(
+          document.getElementById('score').style.color = 'red'
+        ) ;        
     }
   </script>
   
